Fix dotmenu script

--- a/views/partials/cover.hbs
+++ b/views/partials/cover.hbs
@@ -1,4 +1,4 @@
-<section class="cover" id="cover">
+<section class="cover section" id="cover">
 
   <img class="cover__inside-svg" src="/inside.svg" alt="inside">
 
