--- a/views/partials/dotstyle-menu.hbs
+++ b/views/partials/dotstyle-menu.hbs
@@ -1,25 +1,22 @@
 <div class="dotstyle-menu" id="dot_menu">
   <ul class="dotstyle-menu__list">
-    <li class="dotstyle-menu__list-item dotstyle-menu__list-item--current" data-scroll>
-      <a href="#cover"></a>
+    <li class="dotstyle-menu__list-item dotstyle-menu__list-item--current" data-hash="#cover" data-scroll>
+      <a href="#cover" class="dotstyle-menu__link"></a>
     </li>
-    <li class="dotstyle-menu__list-item" data-scroll>
-      <a href="#one_of_us"></a>
+    <li class="dotstyle-menu__list-item" data-hash="#one_of_us" data-scroll>
+      <a href="#one_of_us" class="dotstyle-menu__link"></a>
     </li>
-    <li class="dotstyle-menu__list-item" data-scroll>
-      <a href="#the_family"></a>
+    <li class="dotstyle-menu__list-item" data-hash="#family" data-scroll>
+      <a href="#family" class="dotstyle-menu__link"></a>
     </li>
-    <li class="dotstyle-menu__list-item" data-scroll>
-      <a href="#customers"></a>
+    <li class="dotstyle-menu__list-item" data-hash="#customers" data-scroll>
+      <a href="#customers" class="dotstyle-menu__link"></a>
     </li>
-    <li class="dotstyle-menu__list-item" data-scroll>
-      <a href="#gallery"></a>
+    <li class="dotstyle-menu__list-item" data-hash="#gallery" data-scroll>
+      <a href="#gallery" class="dotstyle-menu__link"></a>
     </li>
-    <li class="dotstyle-menu__list-item" data-scroll>
-      <a href="#timeline"></a>
+    <li class="dotstyle-menu__list-item" data-hash="#timeline" data-scroll>
+      <a href="#timeline" class="dotstyle-menu__link"></a>
     </li>
   </ul>
-
-  <img class="dotstyle-menu__scroll-indicator" src="scrollmus.svg">
-  <img class="dotstyle-menu__scroll-arrow" src="scrollpil.svg">
 </div>
