--- a/views/partials/gallery.hbs
+++ b/views/partials/gallery.hbs
@@ -1,4 +1,4 @@
-<section id="gallery" class="gallery">
+<section id="gallery" class="gallery section section">
   <div class="gallery__images">
     <div class="gallery__overlay">
       <h2 class="gallery__overlay-text">{{text}}</h2>
