--- a/views/partials/one_of_us.hbs
+++ b/views/partials/one_of_us.hbs
@@ -1,4 +1,4 @@
-<section id="one_of_us" class="one-of-us">
+<section id="one_of_us" class="one-of-us section">
   <div class="one-of-us__top">
     <div class="one-of-us__title">
       <div class="green-triangle"></div>
