--- a/views/partials/the_family.hbs
+++ b/views/partials/the_family.hbs
@@ -1,4 +1,4 @@
-<section id="family" class="the-family">
+<section id="family" class="the-family section">
   <h2 class="the-family__title">{{title}}</h2>
   <div class="the-family-wrapper">
     {{#each members}}
