--- a/views/partials/timeline.hbs
+++ b/views/partials/timeline.hbs
@@ -1,4 +1,4 @@
-<section id="timeline" class="timeline">
+<section id="timeline" class="timeline section">
   <h2>{{title}}</h2>
   <ul class="timeline__items">
     {{#each items}}
