--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,16 +9,15 @@
 </head>
 
 <body>
+  {{> header }}
+  {{> dotstyle-menu }}
+  {{{body}}}
+  {{> footer footer}}
 
-{{> header }}
-
-{{> dotstyle-menu }}
-
-{{{body}}}
-
-{{> footer footer}}
-
-<script src="main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/inview.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
