--- a/views/partials/customers.hbs
+++ b/views/partials/customers.hbs
@@ -1,4 +1,4 @@
-<section id="customers" class="customers">
+<section id="customers" class="customers section">
   <div class="customers__content">
     <h2>{{title}}</h2>
     <p>{{text}}</p>
