Updated dotstyle menu with join-us dot

--- a/views/partials/dotstyle-menu.hbs
+++ b/views/partials/dotstyle-menu.hbs
@@ -18,5 +18,8 @@
     <li class="dotstyle-menu__list-item" data-hash="#timeline" data-scroll>
       <a href="#timeline" class="dotstyle-menu__link"></a>
     </li>
+    <li class="dotstyle-menu__list-item" data-hash="#join_us" data-scroll>
+      <a href="#join_us" class="dotstyle-menu__link"></a>
+    </li>
   </ul>
 </div>
