Use random quote

--- a/views/partials/gallery.hbs
+++ b/views/partials/gallery.hbs
@@ -1,7 +1,8 @@
 <section id="gallery" class="gallery section section">
   <div class="gallery__images">
     <div class="gallery__overlay">
-      <h2 class="gallery__overlay-text">{{text}}</h2>
+      <h2 class="gallery__overlay-text">{{quote}}</h2>
+      <h3 class="gallery__overlay-text">- {{author}}</h3>
     </div>
     {{#each images}}
       <div class="gallery__image">
