Updated join us link

--- a/views/partials/one_of_us.hbs
+++ b/views/partials/one_of_us.hbs
@@ -8,7 +8,7 @@
     <div class="one-of-us__body">{{body}}</div>
   </div>
   <div class="one-of-us__bottom">
-    <a href="#contact">
+    <a href="#join_us">
       <span class="orange-btn">{{button}}</span>
     </a>
   </div>
