changed side padding

--- a/assets/styles/components/footer.styl
+++ b/assets/styles/components/footer.styl
@@ -6,7 +6,7 @@
   max-width: content-width;
   margin: 0 auto;
   text-align: center;
-  padding: 100px 3.125%;
+  padding: 100px side_padding;
 
   @media (min-width: is_tablet) {
 		padding: 100px 0;
@@ -15,7 +15,7 @@
 
 .footer__bottom {
   background-color: green;
-  padding: 40px 3.125%;
+  padding: 40px side_padding;
   color: white;
 }
 
