--- a/assets/styles/components/customers.styl
+++ b/assets/styles/components/customers.styl
@@ -1,6 +1,6 @@
 
 .customers {
-  padding: 60px 3.125%;
+  padding: 60px side_padding;
   background-image: url('/triangles/pattern_triangel_gron.svg');
   background-repeat: no-repeat;
   background-position: 0 0;
