--- a/assets/styles/components/one-of-us.styl
+++ b/assets/styles/components/one-of-us.styl
@@ -1,6 +1,6 @@
 .one-of-us {
   margin: 0 auto;
-  padding: 100px 3.125% 50px;
+  padding: 100px side_padding 50px;
   max-width: content-width;
 
   @media (min-width: is_tablet) {
