--- a/assets/styles/base/headline.styl
+++ b/assets/styles/base/headline.styl
@@ -9,8 +9,13 @@ h3 {
 }
 
 h1 {
-  font-size: 68px;
-  line-height: 64px;
+  font-size: 50px;
+  line-height: 54px;
+  
+  @media (min-width: is_tablet) {
+    font-size: 68px;
+    line-height: 64px;
+  }
 }
 
 h2 {
