Fixed links in one_of_us

--- a/views/partials/one_of_us.hbs
+++ b/views/partials/one_of_us.hbs
@@ -5,7 +5,16 @@
       <div class="orange-triangle"></div>
       <h1 class="headline">{{title}}</h1>
     </div>
-    <div class="one-of-us__body">{{body}}</div>
+    <div class="one-of-us__body">
+      <p>
+        <span>{{headline}}</span>
+        <span>{{first_section}}</span>
+        <a href="#family">Alphadevare</a>
+        <span>{{second_section}}</span>
+        <a href="https://alphadev.se" target="_blank">alphadev.se</a>
+        <span>{{third_section}}</span>
+      </p>
+    </div>
   </div>
   <div class="one-of-us__bottom">
     <a href="#join_us">
