Add benefits section

--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -15,5 +15,6 @@
 @import "the_family.styl";
 @import "family_member.styl";
 @import "timeline.styl";
+@import "benefits.styl";
 @import "join_us.styl";
 @import "footer.styl";
