--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,6 +3,7 @@
 {{> the_family the_family }}
 {{> customers customers}}
 {{> gallery gallery}}
+{{> benefits uspar }}
 {{> timeline timeline }}
 {{> travel travel }}
 {{> join_us join_us }}
