added parallax effect with background triangles

--- a/assets/styles/components/cover.styl
+++ b/assets/styles/components/cover.styl
@@ -9,6 +9,8 @@
   background-size: cover;
   background-color: purple-darker;
   color: white;
+  position: relative;
+  z-index: 10;
 
   padding: 15px;
   @media (min-width: is_tablet) {
