--- a/assets/styles/components/customers.styl
+++ b/assets/styles/components/customers.styl
@@ -1,7 +1,7 @@
 
 .customers {
   padding: 60px side_padding;
-  background-image: url('/triangles/pattern_triangel_gron.svg');
+  //background-image: url('/triangles/pattern_triangel_gron.svg');
   background-repeat: no-repeat;
   background-position: 0 0;
 
