--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,6 +11,11 @@
 <body>
   {{> header }}
   {{> dotstyle-menu }}
+  <img id="bg-triangle-green" class="bg-triangle bg-triangle--green" src="/triangles/pattern_triangel_gron.svg" alt="triangles">
+  <img id="bg-triangle-blue" class="bg-triangle bg-triangle--blue" src="/triangles/pattern_triangel_bla.svg" alt="triangles">
+  {{!-- <img id="bg-triangle-orange" class="bg-triangle-orange" src="/triangles/personal_orange.svg" alt="triangles"> --}}
+  <img id="bg-triangle-blue-small" class="bg-triangle-blue-small" src="/triangles/personal_bla.svg" alt="triangles">
+
   {{{body}}}
   {{> footer footer}}
 
