--- a/assets/styles/components/benefits.styl
+++ b/assets/styles/components/benefits.styl
@@ -1,20 +1,46 @@
 .benefits {
   max-width: content-width;
-  padding: 100px 0;
+  padding: 50px 0;
   margin: 0 auto;
-}
 
-.benefits__usps {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  position: relative;
-  justify-content: center;
+  @media (min-width: is_tablet) {
+		padding: 100px 0;
+	}
 }
 
 .benefits__overlay {
   width: 100%;
-  height: 100%;
-  padding: 0 12%;
+  height: 400px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  padding: 0 side_padding;
   text-align: center;
+
+  @media (min-width: is_tablet) {
+		height: 300px;
+    padding: 0 12%;
+	}
+}
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+}
+
+.swiper-button-prev, .swiper-button-next {
+  display: none;
+  opacity: 0.5;
+
+  @media (min-width: is_tablet) {
+		display: block;
+	}
+}
+
+.swiper-pagination-bullet-active {
+  background-color: orange;
 }
