Better history handling on dot menu plus new dot menu item for benefits

--- a/views/partials/dotstyle-menu.hbs
+++ b/views/partials/dotstyle-menu.hbs
@@ -15,6 +15,9 @@
     <li class="dotstyle-menu__list-item" data-hash="#gallery" data-scroll>
       <a href="#gallery" class="dotstyle-menu__link"></a>
     </li>
+    <li class="dotstyle-menu__list-item" data-hash="#benefits" data-scroll>
+      <a href="#benefits" class="dotstyle-menu__link"></a>
+    </li>
     <li class="dotstyle-menu__list-item" data-hash="#timeline" data-scroll>
       <a href="#timeline" class="dotstyle-menu__link"></a>
     </li>
