--- a/views/partials/benefits.hbs
+++ b/views/partials/benefits.hbs
@@ -1,4 +1,4 @@
-<section id="benefits" class="benefits">
+<section id="benefits" class="benefits section">
   <div class="benefits__usps">
     <div class="swiper-container">
       <div class="swiper-wrapper">
