Added test of svg coffee to join us

--- a/assets/styles/components/timeline.styl
+++ b/assets/styles/components/timeline.styl
@@ -3,6 +3,10 @@
   padding: 60px 30px;
 
   @media (min-width: is_tablet) {
+    padding: 100px side_padding;
+  }
+
+  @media (min-width: is_desktop) {
     padding: 100px 0;
   }
 }
