--- a/views/partials/join_us.hbs
+++ b/views/partials/join_us.hbs
@@ -2,6 +2,7 @@
   <h2 class="join-us__title">{{title}}</h2>
   <div class="join-us__content">
     <p>{{text}}</p>
+    <div class="join-us__coffee-logo"></div>
 
     <a href="mailto:{{mail}}">
       <span class="orange-btn">{{link}}</span>
