--- a/assets/styles/components/join_us.styl
+++ b/assets/styles/components/join_us.styl
@@ -15,3 +15,11 @@
 .join-us h2 {
   text-align: center;
 }
+
+.join-us__coffee-logo {
+  margin: 0 auto 25px;
+  background-image: url("kaffe.svg");
+  background-repeat: no-repeat;
+  height: 100px;
+  width: 69px;
+}
