Mobb1: Update layout

--- a/views/partials/one_of_us.hbs
+++ b/views/partials/one_of_us.hbs
@@ -8,11 +8,11 @@
     <div class="one-of-us__body">
       <p>
         <span>{{headline}}</span>
-        <span>{{first_section}}</span>
-        <a href="#family">Alphadevare</a>
-        <span>{{second_section}}</span>
+      <p>{{first_section}}</p>
+      <p>{{second_section}}
         <a href="https://alphadev.se" target="_blank">alphadev.se</a>
         <span>{{third_section}}</span>
+      </p>
       </p>
     </div>
   </div>
