--- a/views/partials/benefits.hbs
+++ b/views/partials/benefits.hbs
@@ -5,8 +5,8 @@
         {{#each usps}}
         <div class="swiper-slide">
           <div class="benefits__overlay">
-            <h1 class="benefits__overlay-text">{{this.title}}</h1>
-            <p class="benefits__overlay-text">- {{this.text}}</p>
+            <h2 class="benefits__overlay-text">{{this.title}}</h2>
+            <p class="benefits__overlay-text">{{this.text}}</p>
           </div>
         </div>
         {{/each}}
