--- a/assets/styles/components/family_member.styl
+++ b/assets/styles/components/family_member.styl
@@ -18,6 +18,7 @@
 
   &__text {
     flex: 0 0 100%;
+    text-align: left;
     @media (min-width: is_tablet) {
       margin-left: 50px;
       flex: 0 0 60%
