Add some air to the timeline

--- a/assets/styles/components/timeline.styl
+++ b/assets/styles/components/timeline.styl
@@ -15,6 +15,9 @@
   text-align: center;
 }
 
+.timeline__text {
+  color: $orange;
+}
 .timeline__items {
   list-style-type: none;
   max-width: content-width;
@@ -36,7 +39,6 @@
 
   p {
     margin-bottom: 0;
-    margin-top: 0;
   }
 
   @media (min-width: is_tablet) {
