Add subject and body to mail

--- a/views/partials/join_us.hbs
+++ b/views/partials/join_us.hbs
@@ -3,8 +3,7 @@
   <div class="join-us__content">
     <p>{{text}}</p>
     <div class="join-us__coffee-logo"></div>
-
-    <a href="mailto:{{mail}}">
+    <a href="mailto:{{mail}}?subject=Hej!&body=%0D%0AJag tr&auml;ffas g&auml;rna &ouml;ver en kopp kaffe och pratar lite mer.%0D%0A%0D%0AVi h&ouml;rs!%0D%0A">
       <span class="orange-btn">{{link}}</span>
     </a>
   </div>
