Add subject and body to mail

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,7 +4,8 @@
     <div class="contact__adress">{{adress}}</div>
     <div class="contact__info">
       <span class="contact__info-tel">{{tel}}</span>
-      <span class="contact__info-mail"><a href="mailto:{{mail}}">{{mail}}</a></span>
+      <span class="contact__info-mail">
+      <a href="mailto:{{mail}}?subject=Hej!&body=%0D%0AJag tr&auml;ffas g&auml;rna &ouml;ver en kopp kaffe och pratar lite mer.%0D%0A%0D%0AVi h&ouml;rs!%0D%0A">{{mail}}</a></span>
     </div>
     <div class="contact__social">
       <a href="https://www.instagram.com/alphadevsthlm/">
