--- a/assets/styles/components/benefits.styl
+++ b/assets/styles/components/benefits.styl
@@ -9,18 +9,24 @@
 }
 
 .benefits__overlay {
+  max-width: 760px;
+  margin: 0 auto;
   width: 100%;
   height: 400px;
   display: flex;
-  flex-flow: column;
+  flex-flow : column;
   justify-content: center;
   padding: 0 side_padding;
   text-align: center;
 
   @media (min-width: is_tablet) {
 		height: 300px;
-    padding: 0 12%;
+    padding: 0 14%;
 	}
+}
+
+.benefits__overlay-text {
+  font-size: 18px;
 }
 
 .swiper-container {
@@ -35,10 +41,25 @@
 .swiper-button-prev, .swiper-button-next {
   display: none;
   opacity: 0.5;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: auto;
+  background-size: 16px 44px;
+  background-color: #fff;
+  outline: none;
 
   @media (min-width: is_tablet) {
 		display: block;
 	}
+}
+
+.swiper-button-prev {
+  background-position: left;
+}
+
+.swiper-button-next {
+  background-position: right;
 }
 
 .swiper-pagination-bullet-active {
