--- a/views/partials/benefits.hbs
+++ b/views/partials/benefits.hbs
@@ -5,7 +5,7 @@
         {{#each usps}}
         <div class="swiper-slide">
           <div class="benefits__overlay">
-            <h2 class="benefits__overlay-text">{{this.title}}</h2>
+            <h2 class="benefits__overlay-title">{{this.title}}</h2>
             <p class="benefits__overlay-text">{{this.text}}</p>
           </div>
         </div>
