--- a/views/partials/the_family.hbs
+++ b/views/partials/the_family.hbs
@@ -8,7 +8,8 @@
         <div class="swiper-slide">
           <div class="family-member-details">
             <div class="family-member-details__image-wrapper">
-              <img class="family-member-details__image" src="{{this.image}}">
+              <img class="family-member-details__image--mobile" src="{{this.image}}">
+              <img class="family-member-details__image--desktop" src="{{this.image-large}}">
             </div>
             <div class="family-member-details__text">
               <h3>{{this.name}}</h3>
