--- a/assets/styles/components/the_family.styl
+++ b/assets/styles/components/the_family.styl
@@ -5,7 +5,10 @@
 
   &__title {
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 1.5rem;
+    @media (min-width: is_tablet) {
+      margin-bottom: 4rem;
+    }
   }
   &__center-text {
     text-align: center;
