--- a/assets/styles/components/family_member.styl
+++ b/assets/styles/components/family_member.styl
@@ -11,7 +11,6 @@
     justify-content center
   }
 
-
   &__image {
     &--mobile {
       display: block;
@@ -24,12 +23,12 @@
     }
     &--desktop {
       display: none;
-      width: 280px;
-      height: auto;
       @media (min-width: is_tablet) {
         display:block;
+        width: 280px;
+        height: auto;
       }
-  }
+    }
   }
 
   &__text {
@@ -56,6 +55,10 @@ dl {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-bottom: 30px;
+  @media (min-width: is_tablet) {
+    padding-top: 16px;
+  }
 }
 
 dt {
