--- a/views/partials/benefits.hbs
+++ b/views/partials/benefits.hbs
@@ -4,9 +4,14 @@
       <div class="swiper-wrapper">
         {{#each usps}}
         <div class="swiper-slide">
-          <div class="benefits__overlay">
-            <h2 class="benefits__overlay-title">{{this.title}}</h2>
-            <p class="benefits__overlay-text">{{this.text}}</p>
+          <div class="benefits-details">
+            <div class="benefits-details__image-wrapper">
+              <img class="benefits-details__image--desktop" src="{{this.image}}">
+            </div>
+            <div class="benefits-details__text">
+              <h2 class="benefits__overlay-title">{{this.title}}</h2>
+              <p class="benefits__overlay-text">{{this.text}}</p>
+            </div>
           </div>
         </div>
         {{/each}}
