Added things that was missed in earlier merge.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Alphadev Inside</title>
+  <title>Inside Alphadev</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.0/css/swiper.min.css">
   <link rel="stylesheet" href="main.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://alphadev.se/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
