--- a/assets/styles/components/family_member.styl
+++ b/assets/styles/components/family_member.styl
@@ -35,7 +35,8 @@
     flex: 0 0 100%;
     text-align: left;
     @media (min-width: is_tablet) {
-      margin-left: 5px;
+      margin-left: 10px;
+      margin-right: 10px;
       flex: 0 0 60%
     }
     @media (max-width: is_tablet) {
