--- a/assets/styles/components/family_member.styl
+++ b/assets/styles/components/family_member.styl
@@ -35,8 +35,7 @@
     flex: 0 0 100%;
     text-align: left;
     @media (min-width: is_tablet) {
-      margin-left: 10px;
-      margin-right: 10px;
+      padding: 0 20px 0 5px;
       flex: 0 0 60%
     }
     @media (max-width: is_tablet) {
