--- a/views/partials/benefits.hbs
+++ b/views/partials/benefits.hbs
@@ -10,7 +10,7 @@
             </div>
             <div class="benefits-details__text">
               <h2 class="benefits__overlay-title">{{this.title}}</h2>
-              <p class="benefits__overlay-text">{{this.text}}</p>
+              <p class="benefits__overlay-text">{{{this.text}}}</p>
             </div>
           </div>
         </div>
