Usp text styling

--- a/assets/styles/components/benefits.styl
+++ b/assets/styles/components/benefits.styl
@@ -72,6 +72,10 @@
 .benefits__overlay-text {
   font-size: 18px;
   margin: 30px 30px 55px 30px;
+  text-align: center;
+  @media (min-width: is_tablet) {
+		text-align: left;
+	}
 }
 
 .swiper-container {
