Minimized gallery header in mobile

--- a/assets/styles/components/gallery.styl
+++ b/assets/styles/components/gallery.styl
@@ -20,6 +20,12 @@
   padding: 0 12%;
   background-color: rgba(0,0,0, 0.25);
   text-align: center;
+  h2 {
+    @media (max-width: is_tablet) {
+      font-size: 30px;
+      line-height: 30px;
+    }
+  }
 }
 
 .gallery__overlay-text {
