added a new salesperson part

--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -17,5 +17,7 @@
 @import "timeline.styl";
 @import "benefits.styl";
 @import "join_us.styl";
+@import "back-to-inside.styl";
 @import "footer.styl";
 @import "background-triangles.styl";
+@import "sales-responsible.styl";
