added jobopportunity to main page

--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -18,6 +18,7 @@
 @import "benefits.styl";
 @import "join_us.styl";
 @import "back-to-inside.styl";
+@import "job-opportunity.styl";
 @import "footer.styl";
 @import "background-triangles.styl";
 @import "sales-responsible.styl";
