--- a/views/partials/job_opportunity.hbs
+++ b/views/partials/job_opportunity.hbs
@@ -1,3 +1,10 @@
-<div>
-  <h2>{{title}}</h1>
+<div id="job-opportunity" class="job-opportunity">
+  <a href="/saljansvarig" title="saljansvarig">
+  <div class="job-opportunity__link">
+    <h2 class="job-opportunity__link-title">{{salesResponsible.title}}</h1>
+    <div class="job-opportunity__link-arrow-wrapper">
+      <img id="job-arrow" class="job-opportunity__link-arrow" src="/scrollpil_black.svg" alt="arrow">
+    </div>
+  </div>
+  </a>
 </div>
