--- a/assets/styles/components/sales-responsible.styl
+++ b/assets/styles/components/sales-responsible.styl
@@ -48,4 +48,19 @@
     text-align: center;
     margin-bottom: 70px;
   }
+
+  &__apply-button {
+    color: white;
+    background-color: #da9926;
+    padding: 20px;
+    border-radius: 5px;
+    font-size: 1.15rem;
+    font-family: 'Passion One';
+    text-transform: uppercase;
+    text-align: center;
+
+    @media (min-width: is_tablet) {
+      font-size: 1.315rem;
+    }
+  }
 }
