small change on preamble

--- a/assets/styles/components/sales-responsible.styl
+++ b/assets/styles/components/sales-responsible.styl
@@ -16,6 +16,8 @@
     font-size: 1.13rem;
     text-align: center;
     margin-bottom: 60px;
+    font-color: #da9926;
+    font-style: italic;
   }
 
   &__part {
