--- a/assets/styles/components/sales-responsible.styl
+++ b/assets/styles/components/sales-responsible.styl
@@ -16,7 +16,7 @@
     font-size: 1.13rem;
     text-align: center;
     margin-bottom: 60px;
-    font-color: #da9926;
+    color: #da9926;
     font-style: italic;
   }
 
