--- a/assets/styles/components/gallery.styl
+++ b/assets/styles/components/gallery.styl
@@ -18,18 +18,23 @@
   width: 100%;
   height: 100%;
   padding: 0 12%;
-  background-color: rgba(0,0,0, 0.25);
+  background-color: rgba(0, 0, 0, 0.25);
   text-align: center;
+
   h2 {
+    font-size: 28px;
+    line-height: 28px;
+
     @media (max-width: is_tablet) {
-      font-size: 30px;
-      line-height: 30px;
+      font-size: 22px;
+      line-height: 22px;
     }
   }
 }
 
 .gallery__overlay-text {
   color: white;
+  text-shadow: 1px 1px #333;
 }
 
 .gallery__image {
