--- a/assets/styles/components/timeline.styl
+++ b/assets/styles/components/timeline.styl
@@ -18,6 +18,7 @@
 .timeline__text {
   color: $orange;
 }
+
 .timeline__items {
   list-style-type: none;
   max-width: content-width;
@@ -31,12 +32,14 @@
 
 .timeline__items li:nth-of-type(1) {
   padding-top: 0;
+
   .timeline__arrow {
-    transform: translateY(-15px)
+    transform: translateY(-15px);
   }
 }
+
 .timeline__arrow:last-of-type {
-    transform: translateY(25px)
+  transform: translateY(25px);
 }
 
 .timeline__items li {
@@ -47,8 +50,12 @@
   padding-left: 60px;
   border-left: 3px dashed purple-darker;
 
+  h3 {
+    margin-top: 10px;
+  }
+
   p {
-    margin-bottom: 0;
+    margin-bottom: 4px;
   }
 
   @media (min-width: is_tablet) {
@@ -66,6 +73,12 @@
       padding-left: 60px;
       padding-right: 0;
       border-left: 3px dashed purple-darker;
+    }
+  }
+
+  @media (max-width: is_tablet) {
+    &:last-child {
+      padding-top: 20px;
     }
   }
 }
@@ -94,7 +107,6 @@
 }
 
 .timeline__items li:nth-child(odd) .timeline__arrow {
-
   @media (min-width: is_tablet) {
     right: -25px;
     left: auto;
