--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -6,6 +6,7 @@
 @import "headline.styl";
 @import "header.styl";
 @import "arrow.styl";
+@import "swiper.styl";
 
 @import "cover.styl";
 @import "dotstyle-menu.styl";
