--- a/assets/styles/components/benefits.styl
+++ b/assets/styles/components/benefits.styl
@@ -6,10 +6,6 @@
   @media (min-width: is_tablet) {
     padding: 100px 0;
   }
-
-  &-title {
-    text-align: center;
-  }
 }
 
 .benefits-details {
@@ -65,11 +61,6 @@
   padding: 0 side_padding;
   text-align: center;
 
-  @media (min-width: is_tablet) {
-    height: 300px;
-    padding: 0 14%;
-  }
-
   &-title {
     text-align: center;
   }
@@ -78,5 +69,23 @@
     font-size: 18px;
     margin: 20px 30px 35px 30px;
     text-align: center;
+  }
+
+  @media (min-width: is_tablet) {
+    height: 300px;
+    padding: 0 14%;
+
+    &-title {
+      text-align: left;
+      margin: 10px 35px 10px 30px;
+      font-size: 24px;
+      line-height: 34px;
+      border-bottom: 2px solid orange-dark;
+    }
+
+    &-text {
+      text-align: left;
+      margin-top: 20px;
+    }
   }
 }
