Added new section to home page

--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -12,6 +12,7 @@
 @import "dotstyle-menu.styl";
 @import "one-of-us.styl";
 @import "customers.styl";
+@import "employer-of-the-future.styl";
 @import "gallery.styl";
 @import "the_family.styl";
 @import "family_member.styl";
