--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,7 @@
 {{> cover cover }}
 {{> one_of_us one_of_us}}
 {{> benefits uspar }}
+{{> employer_of_the_future employer_of_the_future }}
 {{> gallery gallery}}
 {{> the_family the_family }}
 {{> customers customers}}
