--- a/views/partials/customers.hbs
+++ b/views/partials/customers.hbs
@@ -4,12 +4,12 @@
     <p>{{text}}</p>
 
     <ul class="customers__list">
-      <li><img src="/companies/hm.png" alt=""></li>
-      <li><img src="/companies/spotify.png" alt=""></li>
-      <li><img src="/companies/nasdaq.png" alt=""></li>
-      <li><img src="/companies/expressen.png" alt=""></li>
-      <li><img src="/companies/klarna.png" alt=""></li>
-      <li><img src="/companies/tre.png" alt=""></li>
+      <li><img src="/companies/hm.png" alt="H&M"></li>
+      <li><img src="/companies/spotify.png" alt="Spotify"></li>
+      <li><img src="/companies/nasdaq.png" alt="Nasdaq"></li>
+      <li><img src="/companies/expressen.png" alt="Expressen"></li>
+      <li><img src="/companies/klarna.png" alt="Klarna"></li>
+      <li><img src="/companies/tre.png" alt="Tre"></li>
     </ul>
   </div>
 </section>
