Added swiper with autoplay and crossfade transition for customers. Currently 15 companies is divided in 5 companies per slide.

--- a/views/partials/customers.hbs
+++ b/views/partials/customers.hbs
@@ -3,13 +3,36 @@
     <h2>{{title}}</h2>
     <p>{{text}}</p>
 
-    <ul class="customers__list">
-      <li><img src="/companies/hm.png" alt="H&M"></li>
-      <li><img src="/companies/spotify.png" alt="Spotify"></li>
-      <li><img src="/companies/nasdaq.png" alt="Nasdaq"></li>
-      <li><img src="/companies/expressen.png" alt="Expressen"></li>
-      <li><img src="/companies/klarna.png" alt="Klarna"></li>
-      <li><img src="/companies/tre.png" alt="Tre"></li>
-    </ul>
+    <div class="swiper customer-swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <ul class="customers__list">
+            <li><img src="/companies/hm.png" alt="H&M"></li>
+            <li><img src="/companies/spotify.png" alt="Spotify"></li>
+            <li><img src="/companies/nasdaq.png" alt="Nasdaq"></li>
+            <li><img src="/companies/expressen.png" alt="Expressen"></li>
+            <li><img src="/companies/klarna.png" alt="Klarna"></li>
+          </ul>
+        </div>
+        <div class="swiper-slide">
+          <ul class="customers__list">
+            <li><img src="/companies/tre.png" alt="Tre"></li>
+            <li><img src="/companies/chromaway.png" alt="ChromaWay"></li>
+            <li><img src="/companies/cmore.png" alt="CMore"></li>
+            <li><img src="/companies/ecster.png" alt="Ecster"></li>
+            <li><img src="/companies/insurely.png" alt="Insurely"></li>
+          </ul>
+        </div>
+        <div class="swiper-slide">
+          <ul class="customers__list">
+            <li><img src="/companies/kivra.png" alt="Kivra"></li>
+            <li><img src="/companies/nasdaq.png" alt="Nasdaq"></li>
+            <li><img src="/companies/plugsurfing.png" alt="Plugsurfing"></li>
+            <li><img src="/companies/sbab.png" alt="SBAB"></li>
+            <li><img src="/companies/uc.png" alt="UC"></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
